--- a/css/style.css
+++ b/css/style.css
@@ -30,23 +30,23 @@ div {
   width: 50%;
   background-repeat: no-repeat;
   position: absolute;
-  top: 80px;
-  right: 10px;
+  top: 10%;
+  right: 5%;
   z-index: 2;
 }
 
 .bg_color {
-  height: 150px;
-  width: 900px;
+  height: 25%;
+  width: 70%;
   background-color: blue;
   position: absolute;
-  bottom: 100px;
+  bottom: 10%;
   z-index: 1;
 }
 
 p.everyday {
-  font-size: 50px;
+  font-size: 300%;
   color: black;
   position: absolute;
-  bottom: 250px;
+  top: 59%;
 }
